data dictionary added

--- a/notebooks/4.0-ta-eda.ipynb
+++ b/notebooks/4.0-ta-eda.ipynb
@@ -16,12 +16,12 @@
    "outputs": [],
    "source": [
     "#importing relevant packages\n",
-    "%run /Users/thomasadler/Desktop/congenial-spoon/notebooks/0-ta-packages.py"
+    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/0-ta-packages.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "41afd3b6",
    "metadata": {},
    "outputs": [],
@@ -29,14 +29,6 @@
     "#defining working directory\n",
     "filepath = '/Users/thomasadler/Desktop/Capstone_Docs/'"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9204dc5d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -366,7 +358,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "water_df['status_id'].value_counts()"
+    "water_df['staleness_score'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c674e2af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "water_df['management_clean'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee4e3f54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "water_df.columns"
    ]
   },
   {
@@ -690,39 +702,52 @@
    "outputs": [],
    "source": [
     "def ts_quality(df):\n",
-    "    master_df=pd.DataFrame()\n",
-    "    unique_points=df['wpdx_id'].unique()\n",
+    "    master_df = pd.DataFrame()\n",
+    "    unique_points = df['wpdx_id'].unique()\n",
     "    for id in unique_points:\n",
     "        onewaterpoint=df[['wpdx_id', 'report_date','install_year','usage_cap', 'crucialness',\\\n",
-    "                          'pressure', 'served_population']][df['wpdx_id']==id]\n",
+    "                          'pressure', 'served_population','functioning']][df['wpdx_id']==id]\n",
     "        first_day = onewaterpoint['report_date'].min()\n",
-    "        onewaterpoint['install_year_dt']=pd.to_datetime(onewaterpoint['install_year'].astype('float32'), format='%Y')\n",
-    "        installed_year=onewaterpoint['install_year_dt'].mean()\n",
-    "        last_day=datetime(2022, 6, 30)\n",
-    "        \n",
+    "        onewaterpoint['install_year_dt'] = pd.to_datetime(\n",
+    "            onewaterpoint['install_year'].astype('float32'), format='%Y')\n",
+    "        installed_year = onewaterpoint['install_year_dt'].mean()\n",
+    "        last_day = datetime(2022, 6, 30)\n",
+    "\n",
     "        first_day = onewaterpoint['report_date'].min()\n",
-    "        onewaterpoint['install_year_dt']=pd.to_datetime(onewaterpoint['install_year'].astype('float32'), format='%Y')\n",
-    "        installed_year=onewaterpoint['install_year_dt'].mean()\n",
-    "        last_day=datetime(2022, 6, 30)\n",
-    "        \n",
-    "        if pd.isnull(first_day)==True:\n",
-    "            first_day=datetime(2022, 6, 29)\n",
-    "        elif first_day>installed_year:\n",
-    "            first_day=installed_year\n",
+    "        onewaterpoint['install_year_dt'] = pd.to_datetime(\n",
+    "            onewaterpoint['install_year'].astype('float32'), format='%Y')\n",
+    "        installed_year = onewaterpoint['install_year_dt'].mean()\n",
+    "        last_day = datetime(2022, 6, 30)\n",
+    "\n",
+    "        if pd.isnull(first_day) == True:\n",
+    "            first_day = datetime(2022, 6, 29)\n",
+    "        elif first_day > installed_year:\n",
+    "            first_day = installed_year\n",
     "        else:\n",
-    "            first_day=first_day\n",
-    "        #print (id, first_day, installed_year, last_day)\n",
-    "        onewaterpoint=onewaterpoint.groupby(['report_date', 'wpdx_id']).mean()\n",
-    "        onewaterpoint.reset_index(level=1,inplace=True)\n",
+    "            first_day = first_day\n",
+    "        onewaterpoint = onewaterpoint.groupby(['report_date',\n",
+    "                                               'wpdx_id']).mean()\n",
+    "        onewaterpoint.reset_index(level=1, inplace=True)\n",
     "        onewaterpoint\n",
-    "        \n",
-    "        point_df=onewaterpoint.reindex(pd.date_range(start=first_day, end=last_day, freq=\"d\"))\n",
+    "\n",
+    "        point_df = onewaterpoint.reindex(\n",
+    "            pd.date_range(start=first_day, end=last_day, freq=\"d\"))\n",
     "        point_df = point_df.fillna(method='ffill')\n",
     "        point_df = point_df.fillna(0)\n",
-    "        master_df=pd.concat([master_df, point_df])\n",
+    "        master_df = pd.concat([master_df, point_df])\n",
     "    final_timeseries=master_df[['usage_cap', 'crucialness',\\\n",
-    "                          'pressure', 'served_population']].groupby(level=0).sum()\n",
+    "                          'pressure', 'served_population', 'functioning']].groupby(level=0).sum()\n",
     "    return final_timeseries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8850a6a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agago_water_df['functioning']=agago_water_df['status_id'].map({'Yes': 1, 'No': 0,  'Unknown': 0})"
    ]
   },
   {
@@ -748,6 +773,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a6b206b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "337f6811",
    "metadata": {},
    "outputs": [],
@@ -759,20 +792,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cff16104",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "99501afd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#num of fatalities and events over time -1 TS plot\n",
     "fig = make_subplots(specs=[[{\"secondary_y\": True}]])\n",
     "\n",
     "fig.add_trace(\n",
-    "    go.Scatter(x=agago_water_ts.index, y=agago_water_ts['usage_cap'], name=\"Usage capacity\"),\n",
+    "    go.Scatter(x=agago_water_ts.index,\n",
+    "               y=agago_water_ts['usage_cap'],\n",
+    "               name=\"Usage capacity\"),\n",
     "    secondary_y=False,\n",
     ")\n",
     "\n",
     "fig.add_trace(\n",
-    "    go.Scatter(x=agago_water_ts.index, y=agago_water_ts['served_population'], name=\"Served population\"),\n",
+    "    go.Scatter(x=agago_water_ts.index,\n",
+    "               y=agago_water_ts['served_population'],\n",
+    "               name=\"Served population\"),\n",
     "    secondary_y=True,\n",
     ")\n",
     "fig.update_yaxes(title_text=\"Usage capacity\", secondary_y=False)\n",
@@ -796,6 +840,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9bd56745",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lira_water_df['functioning']=lira_water_df['status_id'].map({'Yes': 1, 'No': 0,  'Unknown': 0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b238f51c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b95d9c77",
    "metadata": {},
    "outputs": [],
@@ -813,12 +875,16 @@
     "fig = make_subplots(specs=[[{\"secondary_y\": True}]])\n",
     "\n",
     "fig.add_trace(\n",
-    "    go.Scatter(x=lira_water_ts.index, y=lira_water_ts['usage_cap'], name=\"Usage capacity\"),\n",
+    "    go.Scatter(x=lira_water_ts.index,\n",
+    "               y=lira_water_ts['usage_cap'],\n",
+    "               name=\"Usage capacity\"),\n",
     "    secondary_y=False,\n",
     ")\n",
     "\n",
     "fig.add_trace(\n",
-    "    go.Scatter(x=lira_water_ts.index, y=lira_water_ts['served_population'], name=\"Served population\"),\n",
+    "    go.Scatter(x=lira_water_ts.index,\n",
+    "               y=lira_water_ts['served_population'],\n",
+    "               name=\"Served population\"),\n",
     "    secondary_y=True,\n",
     ")\n",
     "fig.update_yaxes(title_text=\"Usage capacity\", secondary_y=False)\n",
@@ -837,6 +903,16 @@
    "outputs": [],
    "source": [
     "kamwenge_water_df=working_water_df[working_water_df['clean_adm2']=='Kamwenge']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06c2fd60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kamwenge_water_df['functioning']=kamwenge_water_df['status_id'].map({'Yes': 1, 'No': 0,  'Unknown': 0})"
    ]
   },
   {
@@ -876,6 +952,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f78ac8ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kitgum_water_df=working_water_df[working_water_df['clean_adm2']=='Kitgum']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5a01625",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kitgum_water_df['functioning']=kitgum_water_df['status_id'].map({'Yes': 1, 'No': 0,  'Unknown': 0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcc43682",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kitgum_water_ts=ts_quality(kitgum_water_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d9b2b2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = make_subplots(specs=[[{\"secondary_y\": True}]])\n",
+    "\n",
+    "fig.add_trace(\n",
+    "    go.Scatter(x=kitgum_water_ts.index,\n",
+    "               y=kitgum_water_ts['usage_cap'],\n",
+    "               name=\"Usage capacity\"),\n",
+    "    secondary_y=False,\n",
+    ")\n",
+    "\n",
+    "fig.add_trace(\n",
+    "    go.Scatter(x=kitgum_water_ts.index,\n",
+    "               y=kitgum_water_ts['served_population'],\n",
+    "               name=\"Served population\"),\n",
+    "    secondary_y=True,\n",
+    ")\n",
+    "fig.update_yaxes(title_text=\"Usage capacity\", secondary_y=False)\n",
+    "fig.update_yaxes(title_text=\"Served population\", secondary_y=True)\n",
+    "fig.update_layout(title=\"Kitgum water quality\")\n",
+    "fig.update_xaxes(rangeslider_visible=True)\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f83552c2",
    "metadata": {},
@@ -899,6 +1035,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "85ad75af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kitgum_water_ts=kitgum_water_ts.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "70a74f48",
    "metadata": {},
    "outputs": [],
@@ -906,7 +1052,8 @@
     "#datasets for conflicts\n",
     "agago_conflict_ts=working_conflict_df[working_conflict_df['clean_adm3']=='Agago']\n",
     "lira_conflict_ts=working_conflict_df[working_conflict_df['clean_adm3']=='Lira']\n",
-    "kamwenge_conflict_ts=working_conflict_df[working_conflict_df['clean_adm3']=='Kamwenge']"
+    "kamwenge_conflict_ts=working_conflict_df[working_conflict_df['clean_adm3']=='Kamwenge']\n",
+    "kitgum_conflict_ts=working_conflict_df[working_conflict_df['clean_adm2']=='Kitgum']"
    ]
   },
   {
@@ -948,6 +1095,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0ad68899",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e735c79d",
    "metadata": {},
    "outputs": [],
@@ -955,8 +1110,15 @@
     "# usage_cap vs fatalities\n",
     "time_series(agago_water_ts, agago_conflict_ts, 'usage_cap', 'fatalities', 'Agago')\n",
     "time_series(lira_water_ts, lira_conflict_ts, 'usage_cap', 'fatalities', 'Lira')\n",
-    "time_series(kamwenge_water_ts, kamwenge_conflict_ts, 'usage_cap', 'fatalities', 'Kamwenge')"
+    "time_series(kamwenge_water_ts, kamwenge_conflict_ts, 'usage_cap', 'fatalities', 'Kamwenge')\n",
+    "time_series(kitgum_water_ts, kitgum_conflict_ts, 'usage_cap', 'fatalities', 'Kitgum')"
    ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "372d20e0",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -995,6 +1157,16 @@
     "time_series(agago_water_ts, agago_conflict_ts, 'served_population', 'events', 'Agago')\n",
     "time_series(lira_water_ts, lira_conflict_ts, 'served_population', 'events', 'Lira')\n",
     "time_series(kamwenge_water_ts, kamwenge_conflict_ts, 'served_population', 'events', 'Kamwenge')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "586f9af0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_series(kitgum_water_ts, kitgum_conflict_ts, 'served_population', 'events', 'Kitgum')"
    ]
   },
   {
