deploy: 5f1046391f5556ce93ead6c0dd7e7cd9599e047f

--- a/notebooks/3.0-ta-access-conflict-data.ipynb
+++ b/notebooks/3.0-ta-access-conflict-data.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "#importing relevant packages\n",
-    "%run /Users/thomasadler/Desktop/Capstone_Docs/packages.py"
+    "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/0-ta-packages.py"
    ]
   },
   {
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "#fetching hidden api key and username from desktop stored under 'conflict_api_key' and 'conflict_api_email'\n",
-    "%run /Users/thomasadler/Desktop/Capstone_Docs/keys.py"
+    "%run /Users/thomasadler/Desktop/futuristic-platipus/keys.py"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "#defining working directory\n",
-    "filepath = '/Users/thomasadler/Desktop/Capstone_Docs/'"
+    "filepath = '/Users/thomasadler/Desktop/capstone_docs/'"
    ]
   },
   {
@@ -543,7 +543,7 @@
    ],
    "source": [
     "#drop irrelevant columns\n",
-    "uganda_conflict_df=pd.DataFrame(uganda_conflict_df.drop(columns=['time_precision', 'event_id_no_cnty',\\\n",
+    "uganda_conflict_df=pd.DataFrame(uganda_conflict_df.drop(columns=['time_precision', 'event_id_cnty','event_id_no_cnty',\\\n",
     "                                                              'geo_precision','timestamp','year',\\\n",
     "                                                             'iso','iso3', 'region','country']))\n",
     "\n",
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "14c7374e",
    "metadata": {},
    "outputs": [
