--- a/notebooks/ARCHIVED-ta-conflict-water-eda.ipynb
+++ b/notebooks/ARCHIVED-ta-conflict-water-eda.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "b8d7f8a0",
+   "metadata": {},
+   "source": [
+    "# NOTEBOOK ARCHIVED\n",
+    "This notebook takes a long time to run and uses considerable memory and computation power. It is recommended to run individual cells if needed. This notebook has been archived as this was an initial, exploratory analysis of our datasets. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a3d9a919",
    "metadata": {},
    "source": [
@@ -27,7 +36,7 @@
    "outputs": [],
    "source": [
     "#defining working directory\n",
-    "filepath = '/Users/thomasadler/Desktop/Capstone_Docs/'"
+    "filepath = '/Users/thomasadler/Desktop/capstone_docs/'"
    ]
   },
   {
@@ -498,7 +507,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#numb of installations over time - 1 TS plot\n",
     "fig = px.histogram(unique_water_df, x=\"install_year\", title='Water point installations')\n",
     "fig.show()"
    ]
@@ -509,16 +517,6 @@
    "metadata": {},
    "source": [
     "### 3 region comparison"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fca99de6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#choose and create dataset for 3 regions -- same workflow"
    ]
   },
   {
@@ -773,14 +771,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6b206b9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "337f6811",
    "metadata": {},
    "outputs": [],
@@ -788,14 +778,6 @@
     "fig = px.line(agago_water_ts, x=agago_water_ts.index, y=agago_water_ts['served_population'], title='Water point usage capacity Agago')\n",
     "fig.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cff16104",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -846,14 +828,6 @@
    "source": [
     "lira_water_df['functioning']=lira_water_df['status_id'].map({'Yes': 1, 'No': 0,  'Unknown': 0})"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b238f51c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1091,14 +1065,6 @@
     "\n",
     "    fig.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ad68899",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1538,14 +1504,6 @@
     "\n",
     "fig.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e94a60f3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
