deploy: 95755dc7a5d9733cce70441f3f644091cc26436e

--- a/notebooks/ta_20_access_demographic_data.ipynb
+++ b/notebooks/ta_20_access_demographic_data.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6e52e579",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d806984f",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "2d514732",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d7e22e86",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f3ab5840",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "c124efc5",
    "metadata": {},
    "outputs": [
@@ -316,7 +316,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "18f03775",
    "metadata": {},
    "outputs": [],
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "cf201de0",
    "metadata": {},
    "outputs": [
@@ -562,7 +562,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "d8a7bf03",
    "metadata": {},
    "outputs": [
@@ -628,53 +628,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "5adef2d5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "subcounty                      0.000000\n",
-       "parish                         0.000000\n",
-       "tot_pop_parish                 0.000000\n",
-       "perc_hh_head_male              0.000000\n",
-       "perc_pop612_primary            0.000000\n",
-       "perc_pop1318_secondary         0.000000\n",
-       "perc_pop18p_illiterate         0.000000\n",
-       "perc_pop017_certificate        0.000000\n",
-       "perc_pop017_both_parents       0.000000\n",
-       "perc_pop2p_disability          0.000000\n",
-       "perc_pop1017_married           0.000000\n",
-       "perc_pop1217_birth             0.000000\n",
-       "perc_pop1464_working           0.000000\n",
-       "perc_pop10p_mobile_phone       0.000000\n",
-       "perc_hh_temp_dwelling          0.007278\n",
-       "perc_pop_5km_dist_primary      0.000132\n",
-       "perc_pop_5km_dist_secondary    0.000000\n",
-       "perc_pop_5km_dist_health       0.000000\n",
-       "perc_pop_5km_dist_police       0.000000\n",
-       "perc_hh_mosquito_net           0.000000\n",
-       "perc_hh_piped_water            0.000265\n",
-       "perc_hh_borehole               0.000662\n",
-       "perc_hh_toilet                 0.002250\n",
-       "perc_hh_own_house              0.000000\n",
-       "perc_hh_own_tv                 0.000000\n",
-       "perc_hh_bank_acc               0.000000\n",
-       "perc_hh_subs_farm              0.000000\n",
-       "perc_hh_less2meals             0.000000\n",
-       "perc_hh_electricity            0.000000\n",
-       "dtype: float64"
+       "subcounty                       0\n",
+       "parish                          0\n",
+       "tot_pop_parish                  0\n",
+       "perc_hh_head_male               0\n",
+       "perc_pop612_primary             0\n",
+       "perc_pop1318_secondary          0\n",
+       "perc_pop18p_illiterate          0\n",
+       "perc_pop017_certificate         0\n",
+       "perc_pop017_both_parents        0\n",
+       "perc_pop2p_disability           0\n",
+       "perc_pop1017_married            0\n",
+       "perc_pop1217_birth              0\n",
+       "perc_pop1464_working            0\n",
+       "perc_pop10p_mobile_phone        0\n",
+       "perc_hh_temp_dwelling          55\n",
+       "perc_pop_5km_dist_primary       1\n",
+       "perc_pop_5km_dist_secondary     0\n",
+       "perc_pop_5km_dist_health        0\n",
+       "perc_pop_5km_dist_police        0\n",
+       "perc_hh_mosquito_net            0\n",
+       "perc_hh_piped_water             2\n",
+       "perc_hh_borehole                5\n",
+       "perc_hh_toilet                 17\n",
+       "perc_hh_own_house               0\n",
+       "perc_hh_own_tv                  0\n",
+       "perc_hh_bank_acc                0\n",
+       "perc_hh_subs_farm               0\n",
+       "perc_hh_less2meals              0\n",
+       "perc_hh_electricity             0\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#check proportion of missing values\n",
-    "total_demographic.isna().mean()"
+    "total_demographic.isna().sum()"
    ]
   },
   {
@@ -687,22 +687,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "48d31ef5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['perc_hh_temp_dwelling', 'perc_pop_5km_dist_primary',\n",
+       "       'perc_hh_piped_water', 'perc_hh_borehole', 'perc_hh_toilet'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#fill missing parish columns with subcounty average\n",
-    "fill_columns=['perc_hh_temp_dwelling', 'perc_pop_5km_dist_primary', 'perc_hh_piped_water','perc_hh_borehole', 'perc_hh_toilet']\n",
+    "#choose columns with null values\n",
+    "null_cols = total_demographic.isna().sum()\n",
+    "cols_to_impute = null_cols[null_cols > 0].index\n",
     "\n",
-    "for col in fill_columns:\n",
-    "    total_demographic[col] = total_demographic[col].fillna(total_demographic.groupby('subcounty')[col].transform('median'))"
+    "#check\n",
+    "cols_to_impute"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "e1080e67",
+   "execution_count": 13,
+   "id": "c07b0d85",
    "metadata": {},
    "outputs": [
     {
@@ -740,14 +754,46 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#fill missing parish columns with subcounty average\n",
+    "for col in cols_to_impute:\n",
+    "    missing_to_regional_median(total_demographic, col, 'subcounty')\n",
+    "    \n",
     "#check\n",
     "total_demographic.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "cb12d096",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['perc_hh_temp_dwelling', 'perc_pop_5km_dist_primary',\n",
+       "       'perc_hh_piped_water', 'perc_hh_borehole', 'perc_hh_toilet'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#choose columns with null values\n",
+    "null_cols2 = total_demographic.isna().sum()\n",
+    "cols_to_impute2 = null_cols[null_cols > 0].index\n",
+    "\n",
+    "#check\n",
+    "cols_to_impute2"
    ]
   },
   {
@@ -760,22 +806,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "214e884f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#fill subsequent missing parish columns with country average\n",
-    "fill_columns_2=['perc_hh_temp_dwelling', 'perc_hh_toilet']\n",
-    "\n",
-    "for col in fill_columns_2:\n",
-    "    total_demographic[col] = total_demographic[col].fillna(total_demographic[col].mean())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "fd48272f",
    "metadata": {},
    "outputs": [
     {
@@ -784,48 +816,30 @@
        "True"
       ]
      },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#check no more null values\n",
-    "total_demographic.isna().sum().sum()==0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "1707f009",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
      "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#check duplicated rows\n",
-    "total_demographic.duplicated().sum()>0"
+    "#fill subsequent missing parish columns with country average\n",
+    "for col in cols_to_impute2:\n",
+    "    total_demographic[col] = total_demographic[col].fillna(total_demographic[col].mean())\n",
+    "\n",
+    "#check no more null values\n",
+    "total_demographic.isna().sum().sum()==0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3bdccde3",
+   "id": "1707f009",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
      "execution_count": 16,
@@ -834,8 +848,30 @@
     }
    ],
    "source": [
+    "#check duplicated rows\n",
+    "total_demographic.duplicated().sum()==0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3bdccde3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "#check duplicated columns\n",
-    "total_demographic.T.duplicated().sum()>0"
+    "total_demographic.T.duplicated().sum()==0"
    ]
   },
   {
@@ -848,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "ca45d3d5",
    "metadata": {},
    "outputs": [
@@ -948,7 +984,7 @@
        "[1382 rows x 1 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "6acf986a",
    "metadata": {},
    "outputs": [
@@ -1186,7 +1222,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1201,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "81dc7700",
    "metadata": {},
    "outputs": [
@@ -1212,7 +1248,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "2af42d47",
    "metadata": {},
    "outputs": [
@@ -1447,7 +1483,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1462,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "3babbf46",
    "metadata": {},
    "outputs": [
@@ -1782,7 +1818,7 @@
        "[8 rows x 29 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1797,7 +1833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "257f59bd",
    "metadata": {},
    "outputs": [
@@ -2017,7 +2053,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2032,7 +2068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "529ba1e3",
    "metadata": {},
    "outputs": [
@@ -2088,7 +2124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "ff6e0c8a",
    "metadata": {},
    "outputs": [
@@ -2141,7 +2177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "b894e028",
    "metadata": {},
    "outputs": [
@@ -2162,7 +2198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "47452a85",
    "metadata": {},
    "outputs": [],
@@ -2173,7 +2209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "2fa89744",
    "metadata": {},
    "outputs": [],
