--- a/notebooks/ta_30_access_conflict_data.ipynb
+++ b/notebooks/ta_30_access_conflict_data.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "b6c14b95",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "id": "c67c0d49",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "id": "e0e0fe54",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "id": "6ca1e2b4",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "id": "ff21a6e0",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "id": "98348787",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "id": "92efe247",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "id": "a8623c3b",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "id": "859c14dd",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "id": "213f7315",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "id": "62a65bcc",
    "metadata": {},
    "outputs": [
@@ -462,27 +462,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "id": "28a7040f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_30_access_conflict_data.ipynb Cell 13'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_30_access_conflict_data.ipynb#ch0000012?line=0'>1</a>\u001b[0m \u001b[39m#convert to datetime\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_30_access_conflict_data.ipynb#ch0000012?line=1'>2</a>\u001b[0m date_converter(uganda_conflict_df, \u001b[39m'\u001b[39;49m\u001b[39mevent_date\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_30_access_conflict_data.ipynb#ch0000012?line=4'>5</a>\u001b[0m \u001b[39m#check\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_30_access_conflict_data.ipynb#ch0000012?line=5'>6</a>\u001b[0m uganda_conflict_df[\u001b[39m'\u001b[39m\u001b[39mevent_date\u001b[39m\u001b[39m'\u001b[39m]\n",
-      "File \u001b[0;32m~/Desktop/futuristic-platipus/notebooks/ta_02_functions.py:13\u001b[0m, in \u001b[0;36mdate_converter\u001b[0;34m(df, col)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdate_converter\u001b[39m(df, col):\n\u001b[1;32m      6\u001b[0m     \u001b[39m'''\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[39m    param df: dataframe\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[39m    param col: 'object' column in dataframe that needs to be converted\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[39m    return: changes col to a datetime column\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[39m    '''\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m     df[col]\u001b[39m=\u001b[39mpd\u001b[39m.\u001b[39mto_datetime(df[col])\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "0      2022-06-30\n",
+       "1      2022-06-29\n",
+       "2      2022-06-29\n",
+       "3      2022-06-27\n",
+       "4      2022-06-27\n",
+       "          ...    \n",
+       "7788   1997-01-11\n",
+       "7789   1997-01-08\n",
+       "7790   1997-01-07\n",
+       "7791   1997-01-01\n",
+       "7792   1997-01-01\n",
+       "Name: event_date, Length: 7793, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#convert to datetime\n",
     "date_converter(uganda_conflict_df, 'event_date')\n",
-    "\n",
     "\n",
     "#check\n",
     "uganda_conflict_df['event_date']"
@@ -490,10 +498,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "e06fb17d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 7793 entries, 0 to 7792\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column          Non-Null Count  Dtype         \n",
+      "---  ------          --------------  -----         \n",
+      " 0   data_id         7793 non-null   object        \n",
+      " 1   event_date      7793 non-null   datetime64[ns]\n",
+      " 2   event_type      7793 non-null   object        \n",
+      " 3   sub_event_type  7793 non-null   object        \n",
+      " 4   actor1          7793 non-null   object        \n",
+      " 5   assoc_actor_1   7793 non-null   object        \n",
+      " 6   inter1          7793 non-null   object        \n",
+      " 7   actor2          7793 non-null   object        \n",
+      " 8   assoc_actor_2   7793 non-null   object        \n",
+      " 9   inter2          7793 non-null   object        \n",
+      " 10  interaction     7793 non-null   object        \n",
+      " 11  admin1          7793 non-null   object        \n",
+      " 12  admin2          7793 non-null   object        \n",
+      " 13  admin3          7793 non-null   object        \n",
+      " 14  location        7793 non-null   object        \n",
+      " 15  latitude        7793 non-null   float32       \n",
+      " 16  longitude       7793 non-null   float32       \n",
+      " 17  source          7793 non-null   object        \n",
+      " 18  source_scale    7793 non-null   object        \n",
+      " 19  notes           7793 non-null   object        \n",
+      " 20  fatalities      7793 non-null   float32       \n",
+      "dtypes: datetime64[ns](1), float32(3), object(17)\n",
+      "memory usage: 1.2+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "#drop irrelevant columns\n",
     "uganda_conflict_df=pd.DataFrame(uganda_conflict_df.drop(columns=['time_precision', 'event_id_cnty','event_id_no_cnty',\\\n",
@@ -506,10 +549,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "6866e61e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "admin1 in the conflict dataset should be clean_adm1 in the water dataset, check with: Eastern\n",
+      "admin2 in the conflict dataset should be clean_adm2 in the water dataset, check with: Bukwo\n",
+      "admin3 in the conflict dataset should be clean_adm3 in the water dataset, check with: Kongasis\n",
+      "location in the conflict dataset should be clean_adm4 in the water dataset, check with: Chesower\n"
+     ]
+    }
+   ],
    "source": [
     "#checking administrative levels match the water dataset\n",
     "print('admin1 in the conflict dataset should be clean_adm1 in the water dataset, check with:',uganda_conflict_df['admin1'].head(1)[0])\n",
@@ -520,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "12f7dafe",
    "metadata": {},
    "outputs": [],
@@ -531,10 +585,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "14c7374e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False False False\n"
+     ]
+    }
+   ],
    "source": [
     "#checking null values and duplicated rows and columns\n",
     "print(uganda_conflict_df.isna().sum().sum()>0,\\\n",
@@ -544,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "b48b70c9",
    "metadata": {},
    "outputs": [],
@@ -556,7 +618,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
